[gd_scene load_steps=28 format=3 uid="uid://bedho26bpm4cs"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_oefsj"]
[ext_resource type="Script" path="res://Player/WeaponsManager.gd" id="2_8b4xd"]
[ext_resource type="Texture2D" uid="uid://b82qme4oewt1w" path="res://Player/crosshair.png" id="3_agoxv"]
[ext_resource type="Resource" uid="uid://b6wuwl6d53t6l" path="res://Player/GunSword.tres" id="3_h8bd7"]
[ext_resource type="Script" path="res://Player/PlayerHud.gd" id="3_m7tu7"]
[ext_resource type="Resource" uid="uid://3pnpicveb428" path="res://Player/GunMusket.tres" id="4_bmk4h"]
[ext_resource type="Resource" uid="uid://cagb3d2oubgyu" path="res://Player/GunArquebus.tres" id="5_4btnx"]
[ext_resource type="PackedScene" uid="uid://b0sux77eusqdw" path="res://@Commons/GLB/musket.glb" id="8_eiodm"]
[ext_resource type="PackedScene" uid="uid://cresnk6t16ltr" path="res://@Commons/GLB/sword.glb" id="8_v33co"]
[ext_resource type="PackedScene" uid="uid://c6yriqc1f7vf5" path="res://@Commons/GLB/arquebus.glb" id="10_oaeoy"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ji4bv"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_k7owp"]
radial_segments = 4
rings = 1

[sub_resource type="Animation" id="Animation_nyqs3"]
resource_name = "GunArquebus Activate"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FPSRig/GunArquebus:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.2, 0.75), Vector3(0.783454, 0.2, -0.125), Vector3(0.5, 0.2, -1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FPSRig/GunArquebus:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-1.74533, -1.48353, 1.5708), Vector3(-0.349066, -0.741765, 0.785398), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_fa8ol"]
resource_name = "GunArquebus Deactivate"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FPSRig/GunArquebus:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.5, 0.2, -1), Vector3(0.783454, 0.2, -0.125), Vector3(0, 0.2, 0.75)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FPSRig/GunArquebus:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.349066, -0.741765, 0.785398), Vector3(-1.74533, -1.48353, 1.5708)]
}

[sub_resource type="Animation" id="Animation_2sddn"]
resource_name = "GunArquebus Reload"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FPSRig/GunArquebus:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.5, 0.2, -1), Vector3(0.5, -0.180835, -0.662649), Vector3(0.5, -0.180835, -0.662649), Vector3(0.5, 0.2, -1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FPSRig/GunArquebus:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-1.5708, 0, 0), Vector3(-1.5708, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_dhnf5"]
resource_name = "GunArquebus Shoot"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FPSRig/GunArquebus:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.5, 0.2, -1), Vector3(0.5, 0.540805, -0.662649), Vector3(0.5, 0.2, -1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FPSRig/GunArquebus:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.56135, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_lhact"]
resource_name = "GunMusket Activate"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FPSRig/GunMusket:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-1.5708, 0, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FPSRig/GunMusket:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.4, -0.5, 0), Vector3(0.4, 0.1, -0.9)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FPSRig/GunMusket:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_2kadk"]
resource_name = "GunMusket Deactivate"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FPSRig/GunMusket:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-1.5708, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FPSRig/GunMusket:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.4, 0.1, -0.9), Vector3(0.4, -0.5, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FPSRig/GunMusket:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_e6sei"]
resource_name = "GunMusket Reload"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FPSRig/GunMusket:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-1.5708, 0, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FPSRig/GunMusket:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.4, -0.5, 0), Vector3(0.4, 0.1, -0.9)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FPSRig/GunMusket:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_yep1l"]
resource_name = "GunMusket Shoot"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FPSRig/GunMusket:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.810863, 0, 0), Vector3(0, 0, 0), Vector3(-6.28319, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FPSRig/GunMusket:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.4, 0.1, -0.9), Vector3(0.4, 0.395892, -0.727848), Vector3(0.4, 0.1, -0.9), Vector3(0.4, -0.9, -0.9)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FPSRig/GunMusket:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_n0r1p"]
resource_name = "GunSword Activate"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FPSRig/GunSword:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.5, -0.5, -0.5), Vector3(0.5, 0.25, -0.7)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FPSRig/GunSword:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FPSRig/GunSword:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, -3.14159), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ixhd3"]
resource_name = "GunSword Deactivate"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FPSRig/GunSword:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.5, 0.25, -0.7), Vector3(-0.5, -0.5, -0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FPSRig/GunSword:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FPSRig/GunSword:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -3.14159)]
}

[sub_resource type="Animation" id="Animation_fughm"]
resource_name = "GunSword Reload"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FPSRig/GunSword:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FPSRig/GunSword:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.5, 0.25, -0.7), Vector3(0, 0.25, -0.7), Vector3(0.614405, 0.25, -0.7), Vector3(0.5, 0.25, -0.7)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FPSRig/GunSword:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 1.5708), Vector3(1.74533, 0, 1.5708), Vector3(0, 0, 1.5708), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_agg6g"]
resource_name = "GunSword Shoot"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FPSRig/GunSword:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FPSRig/GunSword:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.5, 0.25, -0.7), Vector3(-0.5, 0, -1), Vector3(0.5, 0.25, -0.7)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FPSRig/GunSword:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-1.3439, -0.279253, 1.22173), Vector3(0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FPSRig/SwordHit/CollisionShape3D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_le8cg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FPSRig/GunSword:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.5, 0.25, -0.7)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FPSRig/GunSword:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FPSRig/GunSword:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FPSRig/GunMusket:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("FPSRig/GunMusket:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.4, 0.1, -0.9)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("FPSRig/GunMusket:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("FPSRig/GunArquebus:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.2, 0.75)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("FPSRig/GunArquebus:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.74533, -1.48353, 1.5708)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("FPSRig/SwordHit/CollisionShape3D:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mwwsp"]
_data = {
"GunArquebus Activate": SubResource("Animation_nyqs3"),
"GunArquebus Deactivate": SubResource("Animation_fa8ol"),
"GunArquebus Reload": SubResource("Animation_2sddn"),
"GunArquebus Shoot": SubResource("Animation_dhnf5"),
"GunMusket Activate": SubResource("Animation_lhact"),
"GunMusket Deactivate": SubResource("Animation_2kadk"),
"GunMusket Reload": SubResource("Animation_e6sei"),
"GunMusket Shoot": SubResource("Animation_yep1l"),
"GunSword Activate": SubResource("Animation_n0r1p"),
"GunSword Deactivate": SubResource("Animation_ixhd3"),
"GunSword Reload": SubResource("Animation_fughm"),
"GunSword Shoot": SubResource("Animation_agg6g"),
"RESET": SubResource("Animation_le8cg")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_1rnlv"]

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("1_oefsj")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("3_m7tu7")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -66.0
offset_right = 66.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_agoxv")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="CurrentWeapon" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="CurrentAmmo" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="WeaponStack" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_ji4bv")

[node name="TwistPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="PitchPivot" type="Node3D" parent="TwistPivot"]

[node name="Camera3D" type="Camera3D" parent="TwistPivot/PitchPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 5)
current = true
far = 100.0

[node name="RayCast3D" type="RayCast3D" parent="TwistPivot/PitchPivot/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, -5)
target_position = Vector3(0, 2, -10)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_k7owp")

[node name="GetDrops" type="RayCast3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.75, 0.509)
target_position = Vector3(0, 0, -2)
collision_mask = 2

[node name="WeaponsManager" type="Node3D" parent="MeshInstance3D"]
script = ExtResource("2_8b4xd")
_weapon_resources = Array[Resource("res://Player/WeaponResource.gd")]([ExtResource("3_h8bd7"), ExtResource("4_bmk4h"), ExtResource("5_4btnx")])
Start_Weapons = Array[String](["GunSword", "GunMusket", "GunArquebus"])

[node name="FPSRig" type="Node3D" parent="MeshInstance3D/WeaponsManager"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="MeshInstance3D/WeaponsManager/FPSRig"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_mwwsp")
}

[node name="BulletPoint" type="Node3D" parent="MeshInstance3D/WeaponsManager/FPSRig"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.14158, -1)

[node name="SwordHit" type="Area3D" parent="MeshInstance3D/WeaponsManager/FPSRig"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0708954, 0.25, -1.07408)

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/WeaponsManager/FPSRig/SwordHit"]
shape = SubResource("BoxShape3D_1rnlv")
disabled = true

[node name="GunSword" type="Node3D" parent="MeshInstance3D/WeaponsManager/FPSRig"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.25, -0.7)
visible = false

[node name="sword" parent="MeshInstance3D/WeaponsManager/FPSRig/GunSword" instance=ExtResource("8_v33co")]
transform = Transform3D(3.04754e-15, 6.97197e-08, 1.595, 1.595, -6.97197e-08, 0, 6.97197e-08, 1.595, -6.97197e-08, 0.00158942, -0.313295, 0.000974059)

[node name="GunMusket" type="Node3D" parent="MeshInstance3D/WeaponsManager/FPSRig"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, 0.1, -0.9)
visible = false

[node name="musket" parent="MeshInstance3D/WeaponsManager/FPSRig/GunMusket" instance=ExtResource("8_eiodm")]
transform = Transform3D(2.09, 0, 0, 0, 2.09, 0, 0, 0, 2.09, 0, 0, 0)

[node name="GunArquebus" type="Node3D" parent="MeshInstance3D/WeaponsManager/FPSRig"]
transform = Transform3D(0.98106, -0.0871592, 0.172988, -0.173649, 6.28608e-07, 0.984808, -0.0858351, -0.996195, -0.0151345, 0, 0.2, 0.75)

[node name="arquebus" parent="MeshInstance3D/WeaponsManager/FPSRig/GunArquebus" instance=ExtResource("10_oaeoy")]
transform = Transform3D(-6.27258e-08, -1.06916e-08, 1.435, 4.94486e-08, 1.435, 1.06916e-08, -1.435, 4.94486e-08, -6.27258e-08, 0, 0, 0)

[connection signal="Update_Ammo" from="MeshInstance3D/WeaponsManager" to="CanvasLayer" method="_on_weapons_manager_update_ammo"]
[connection signal="Update_Weapon_Stack" from="MeshInstance3D/WeaponsManager" to="CanvasLayer" method="_on_weapons_manager_update_weapon_stack"]
[connection signal="Weapon_Changed" from="MeshInstance3D/WeaponsManager" to="CanvasLayer" method="_on_weapons_manager_weapon_changed"]
[connection signal="animation_finished" from="MeshInstance3D/WeaponsManager/FPSRig/AnimationPlayer" to="MeshInstance3D/WeaponsManager" method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="MeshInstance3D/WeaponsManager/FPSRig/SwordHit" to="MeshInstance3D/WeaponsManager" method="_on_sword_hit_body_entered"]
